[package]
name = "isolanguage-1"
description = "ISO 639-1 library with optional Serde support"
keywords = ["ISO", "639-1", "languages"]
categories = ["data-structures", "internationalization"]
license = "MIT OR Apache-2.0"
version = "0.2.1"
readme = "README.md"
repository = "https://github.com/Kestrer/isolanguage-1"
authors = ["Kestrer <kestrer.dev@gmail.com>"]
edition = "2018"

[dependencies]
itertools = { version = "0.10.1", optional = true }
serde = { version = "1.0.120", features = ["derive"], optional = true }
strum = { version = "0.21.0", optional = true }
strum_macros = { version = "0.21.0", optional = true }

[features]
iterable = ["itertools", "strum", "strum_macros"]
